# notion-custom-domain

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  cspell.json  docker-compose.yml
src/: env.rs  fetcher.rs  file.rs  formatter.rs  http.rs  main.rs
src/env/: mod.rs
src/utils/: fetcher.rs  file.rs  formatter.rs  mod.rs
