[package]
name = "notion-custom-domain"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
env_logger = "0.11.3"
http-body-util = "0.1.1"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["json"] }
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["fs", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
